--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -32,3 +32,9 @@
   text-align: center;
   margin: auto;
 }
+
+.page-3-text {
+  font-family: AvenirNext-Regular, serif;
+  font-size: 16px;
+  margin: auto;
+}
