--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -38,3 +38,23 @@
   font-size: 16px;
   margin: auto;
 }
+
+#graph-container {
+  width: 292px;
+  height: 139px;
+}
+
+#graph-avatar {
+  text-align: center;
+}
+
+#gravatar-span-1 {
+  font-family: AvenirNext-Regular, serif;
+  font-size: 10px;
+}
+
+#gravatar-span-2 {
+  font-family: AvenirNext-Regular, serif;
+  font-size: 11px;
+  font-weight: bold;
+}
